# argue-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
public/: index.html
scripts/: demo_text.py  get_ip.sh
src/argue_agent/: __main__.py  config.py  server.py
src/argue_agent/analysis/: accumulator.py  extractor.py  models.py
src/argue_agent/audio/: processor.py
src/argue_agent/search/: ddg_search.py
src/argue_agent/stt/: base.py  deepgram_stt.py
src/argue_agent/verdict/: synthesizer.py
src/argue_agent/web/static/: index.html
