[project]
name = "argue-agent"
version = "0.1.0"
description = "实时辩论助手 - 监听对话并验证对方论点"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "openai>=1.60",
    "duckduckgo-search>=7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
argue-agent = "argue_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argue_agent"]
